added smaple predictions

--- a/Text_generation_using_RNN.ipynb
+++ b/Text_generation_using_RNN.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "19_MpL3gu4t4zJGnPAIDFRYwh29Sj8m-N",
-      "authorship_tag": "ABX9TyNEB18dweAder3cQXFUeLg+",
+      "authorship_tag": "ABX9TyOq7sveRYlnVkGDlmdnTcul",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1155,6 +1155,273 @@
       "cell_type": "code",
       "metadata": {
         "id": "1t9CcFhmmMeL",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 1000
+        },
+        "outputId": "cdb707aa-1f87-497b-c892-dc26c4e0d66d"
+      },
+      "source": [
+        "example_batch_predictions"
+      ],
+      "execution_count": 64,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tf.Tensor: shape=(128, 120, 84), dtype=float32, numpy=\n",
+              "array([[[ 1.18737528e-03, -1.13881077e-03,  3.60307144e-03, ...,\n",
+              "          6.80338941e-04, -3.38480202e-03,  9.46940039e-04],\n",
+              "        [-1.06542325e-03, -7.86755700e-05, -1.82943768e-04, ...,\n",
+              "          7.53852352e-03,  1.44737412e-03,  4.56151878e-03],\n",
+              "        [-1.03419414e-03, -2.10527447e-03, -4.01626807e-03, ...,\n",
+              "         -5.70273842e-04,  3.90153285e-03,  1.60673691e-03],\n",
+              "        ...,\n",
+              "        [-6.14121649e-03, -5.35518071e-03, -2.42664525e-03, ...,\n",
+              "          4.98933485e-04, -9.86048020e-04, -2.22843559e-03],\n",
+              "        [-8.64812173e-05, -7.25047011e-03, -6.19366718e-03, ...,\n",
+              "          1.06030377e-03,  6.10906491e-03, -5.73227555e-03],\n",
+              "        [-1.15557369e-02, -8.53824243e-03, -1.89277588e-03, ...,\n",
+              "          4.22059419e-03,  7.31424009e-03, -3.91056389e-03]],\n",
+              "\n",
+              "       [[ 6.69617299e-03, -2.47061322e-03,  2.49220291e-03, ...,\n",
+              "         -2.58534029e-03, -6.75199367e-03,  3.55438935e-03],\n",
+              "        [ 1.01601891e-02, -2.93456391e-03,  8.29358678e-03, ...,\n",
+              "         -1.71526801e-04, -1.09923407e-02,  1.40822325e-02],\n",
+              "        [ 4.47712280e-03, -6.75482908e-04,  1.39710796e-03, ...,\n",
+              "          5.14636328e-03, -2.37999717e-03,  5.36405854e-03],\n",
+              "        ...,\n",
+              "        [-1.27969095e-02,  3.14546889e-03, -5.62679069e-03, ...,\n",
+              "          2.64954567e-03,  4.89953766e-03,  4.61109448e-03],\n",
+              "        [ 6.02095039e-04, -1.67045335e-03, -8.31706566e-04, ...,\n",
+              "         -1.18223112e-03, -3.20697343e-03,  5.68348262e-03],\n",
+              "        [-1.78979058e-03,  6.25989400e-04, -6.33335160e-03, ...,\n",
+              "         -1.07367290e-03, -3.77845415e-03,  6.01035682e-03]],\n",
+              "\n",
+              "       [[-2.93677533e-03,  1.67155417e-03, -6.25804672e-03, ...,\n",
+              "          3.42329964e-04, -1.78836472e-03,  2.72311084e-03],\n",
+              "        [ 5.61002409e-04, -2.22774222e-03, -3.63273942e-03, ...,\n",
+              "          2.66365171e-03,  1.68023515e-04,  5.94860350e-04],\n",
+              "        [ 8.71803053e-03, -4.52938490e-03, -9.29462351e-03, ...,\n",
+              "          7.23472703e-03, -5.06915851e-04, -3.33256833e-03],\n",
+              "        ...,\n",
+              "        [-5.42223686e-03,  2.97806668e-03, -6.53167488e-03, ...,\n",
+              "         -2.15802365e-03, -7.91735947e-04,  4.02854756e-03],\n",
+              "        [-9.10145417e-03, -1.60678837e-03, -3.50104272e-03, ...,\n",
+              "         -4.94754687e-03, -5.24677895e-03, -2.43310956e-03],\n",
+              "        [-8.64676200e-03,  8.65228940e-05, -8.54310486e-03, ...,\n",
+              "         -2.51441821e-03, -4.50378237e-03,  2.98919342e-03]],\n",
+              "\n",
+              "       ...,\n",
+              "\n",
+              "       [[ 5.80330566e-03,  2.56935135e-04,  7.12609384e-04, ...,\n",
+              "          1.81801710e-03, -3.18280328e-03, -1.63561618e-03],\n",
+              "        [ 3.56513821e-03, -9.90031753e-04, -5.44235692e-04, ...,\n",
+              "         -3.67933512e-03, -1.46449078e-04, -8.62810295e-04],\n",
+              "        [-2.20802054e-03,  1.46623515e-03, -5.03841462e-03, ...,\n",
+              "         -1.96326664e-03, -2.12894380e-03,  2.91351834e-03],\n",
+              "        ...,\n",
+              "        [ 7.22160935e-03, -5.56091173e-03,  2.01575807e-04, ...,\n",
+              "         -4.49784193e-03, -6.89183502e-03,  3.71241453e-03],\n",
+              "        [ 1.76889938e-03, -4.04103007e-03, -3.54064466e-03, ...,\n",
+              "         -6.50472008e-03, -1.03160171e-02,  7.26663321e-03],\n",
+              "        [-1.44873641e-03,  5.67773823e-04, -7.86721520e-03, ...,\n",
+              "         -3.45646241e-03, -6.92435121e-03,  5.85021125e-03]],\n",
+              "\n",
+              "       [[-7.04036909e-04, -5.85932657e-03,  2.63605150e-04, ...,\n",
+              "         -7.15239579e-03,  1.56693079e-03,  1.19697233e-03],\n",
+              "        [-1.69496110e-03, -9.90159251e-03, -1.65460678e-03, ...,\n",
+              "         -4.10588458e-03, -2.71892175e-03,  7.75378523e-03],\n",
+              "        [ 2.28349119e-03, -8.37210380e-03, -2.86893919e-06, ...,\n",
+              "         -1.33997318e-03, -3.40122823e-03,  1.59465068e-04],\n",
+              "        ...,\n",
+              "        [-7.74620567e-03,  1.92123267e-03, -4.17445460e-03, ...,\n",
+              "         -1.58788497e-03, -2.07489170e-03,  1.69358193e-03],\n",
+              "        [-6.79238793e-03,  2.73243547e-03, -8.37548543e-03, ...,\n",
+              "         -1.18469354e-03, -1.56540144e-03,  3.65568534e-03],\n",
+              "        [-5.80435619e-03,  3.34873772e-03, -1.07076345e-02, ...,\n",
+              "         -3.66457272e-04, -9.17852856e-04,  4.02328838e-03]],\n",
+              "\n",
+              "       [[-7.15387892e-03,  5.21019287e-03, -1.74296263e-03, ...,\n",
+              "          1.26799033e-03,  1.16013200e-03,  4.92571527e-03],\n",
+              "        [ 3.42211593e-03, -7.28233717e-05,  1.54350640e-03, ...,\n",
+              "         -1.84670836e-03, -6.04067883e-03,  6.37582550e-03],\n",
+              "        [-4.86170640e-04,  1.89141650e-03, -4.81457077e-03, ...,\n",
+              "         -1.43675413e-03, -5.72866620e-03,  6.67620916e-03],\n",
+              "        ...,\n",
+              "        [-2.42001610e-03,  7.12069869e-03, -5.94687555e-03, ...,\n",
+              "          3.94160813e-03,  5.72867878e-03,  3.89473047e-03],\n",
+              "        [ 2.42611929e-03, -1.22613343e-03, -6.70977402e-03, ...,\n",
+              "          3.96887306e-03,  8.80111754e-03, -1.82045577e-03],\n",
+              "        [ 6.08070148e-03, -1.01904757e-03, -2.34095845e-03, ...,\n",
+              "          4.62627318e-03,  1.83198880e-03, -2.51971977e-03]]],\n",
+              "      dtype=float32)>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 64
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "W6aPH6sImgOJ",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 1000
+        },
+        "outputId": "29dc2c27-b8ab-41cb-f73b-e29664bcc4b1"
+      },
+      "source": [
+        "sampled_indices = tf.random.categorical(example_batch_predictions[0], num_samples=1)\n",
+        "sampled_indices"
+      ],
+      "execution_count": 65,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tf.Tensor: shape=(120, 1), dtype=int64, numpy=\n",
+              "array([[63],\n",
+              "       [35],\n",
+              "       [44],\n",
+              "       [42],\n",
+              "       [45],\n",
+              "       [ 0],\n",
+              "       [65],\n",
+              "       [14],\n",
+              "       [34],\n",
+              "       [ 6],\n",
+              "       [45],\n",
+              "       [74],\n",
+              "       [77],\n",
+              "       [30],\n",
+              "       [65],\n",
+              "       [71],\n",
+              "       [46],\n",
+              "       [76],\n",
+              "       [ 7],\n",
+              "       [ 9],\n",
+              "       [29],\n",
+              "       [42],\n",
+              "       [ 9],\n",
+              "       [39],\n",
+              "       [62],\n",
+              "       [28],\n",
+              "       [44],\n",
+              "       [77],\n",
+              "       [71],\n",
+              "       [50],\n",
+              "       [82],\n",
+              "       [47],\n",
+              "       [23],\n",
+              "       [38],\n",
+              "       [77],\n",
+              "       [44],\n",
+              "       [62],\n",
+              "       [64],\n",
+              "       [53],\n",
+              "       [16],\n",
+              "       [39],\n",
+              "       [54],\n",
+              "       [63],\n",
+              "       [ 1],\n",
+              "       [ 3],\n",
+              "       [39],\n",
+              "       [78],\n",
+              "       [ 8],\n",
+              "       [80],\n",
+              "       [81],\n",
+              "       [20],\n",
+              "       [23],\n",
+              "       [39],\n",
+              "       [79],\n",
+              "       [38],\n",
+              "       [81],\n",
+              "       [82],\n",
+              "       [36],\n",
+              "       [72],\n",
+              "       [75],\n",
+              "       [40],\n",
+              "       [12],\n",
+              "       [69],\n",
+              "       [76],\n",
+              "       [59],\n",
+              "       [18],\n",
+              "       [59],\n",
+              "       [23],\n",
+              "       [20],\n",
+              "       [54],\n",
+              "       [18],\n",
+              "       [78],\n",
+              "       [31],\n",
+              "       [21],\n",
+              "       [82],\n",
+              "       [77],\n",
+              "       [73],\n",
+              "       [ 6],\n",
+              "       [66],\n",
+              "       [42],\n",
+              "       [57],\n",
+              "       [65],\n",
+              "       [21],\n",
+              "       [74],\n",
+              "       [34],\n",
+              "       [ 2],\n",
+              "       [63],\n",
+              "       [19],\n",
+              "       [19],\n",
+              "       [19],\n",
+              "       [77],\n",
+              "       [76],\n",
+              "       [38],\n",
+              "       [48],\n",
+              "       [55],\n",
+              "       [67],\n",
+              "       [ 3],\n",
+              "       [25],\n",
+              "       [66],\n",
+              "       [ 8],\n",
+              "       [66],\n",
+              "       [13],\n",
+              "       [38],\n",
+              "       [46],\n",
+              "       [57],\n",
+              "       [64],\n",
+              "       [65],\n",
+              "       [59],\n",
+              "       [18],\n",
+              "       [65],\n",
+              "       [41],\n",
+              "       [41],\n",
+              "       [31],\n",
+              "       [10],\n",
+              "       [53],\n",
+              "       [62],\n",
+              "       [75],\n",
+              "       [65],\n",
+              "       [61],\n",
+              "       [48]])>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 65
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "OeYmfSg7mny9",
         "colab_type": "code",
         "colab": {}
       },
