checking sample predictioons

--- a/Text_generation_using_RNN.ipynb
+++ b/Text_generation_using_RNN.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "19_MpL3gu4t4zJGnPAIDFRYwh29Sj8m-N",
-      "authorship_tag": "ABX9TyOq7sveRYlnVkGDlmdnTcul",
+      "authorship_tag": "ABX9TyM+ckuLVPEoApyxZWP3hJBP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1422,6 +1422,84 @@
       "cell_type": "code",
       "metadata": {
         "id": "OeYmfSg7mny9",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 156
+        },
+        "outputId": "b93fde5c-ec6d-4172-c974-15f3c2273805"
+      },
+      "source": [
+        "# Reformat to not be a lists of lists\n",
+        "sampled_indices = tf.squeeze(sampled_indices,axis=-1).numpy()\n",
+        "sampled_indices"
+      ],
+      "execution_count": 66,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([63, 35, 44, 42, 45,  0, 65, 14, 34,  6, 45, 74, 77, 30, 65, 71, 46,\n",
+              "       76,  7,  9, 29, 42,  9, 39, 62, 28, 44, 77, 71, 50, 82, 47, 23, 38,\n",
+              "       77, 44, 62, 64, 53, 16, 39, 54, 63,  1,  3, 39, 78,  8, 80, 81, 20,\n",
+              "       23, 39, 79, 38, 81, 82, 36, 72, 75, 40, 12, 69, 76, 59, 18, 59, 23,\n",
+              "       20, 54, 18, 78, 31, 21, 82, 77, 73,  6, 66, 42, 57, 65, 21, 74, 34,\n",
+              "        2, 63, 19, 19, 19, 77, 76, 38, 48, 55, 67,  3, 25, 66,  8, 66, 13,\n",
+              "       38, 46, 57, 64, 65, 59, 18, 65, 41, 41, 31, 10, 53, 62, 75, 65, 61,\n",
+              "       48])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 66
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "JLXFxwXdmzyx",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 228
+        },
+        "outputId": "e3e5590d-9ca7-473f-ea2f-fcd66f1dbaa8"
+      },
+      "source": [
+        "print(\"Given the input seq: \\n\")\n",
+        "print(\"\".join(ind_to_char[input_example_batch[0]]))\n",
+        "print('\\n')\n",
+        "print(\"Next Char Predictions: \\n\")\n",
+        "print(\"\".join(ind_to_char[sampled_indices ]))\n"
+      ],
+      "execution_count": 67,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Given the input seq: \n",
+            "\n",
+            "but blows. When I am cold he heats me with\n",
+            "  beating; when I am warm he cools me with beating. I am\n",
+            "  wak'd with it when\n",
+            "\n",
+            "\n",
+            "Next Char Predictions: \n",
+            "\n",
+            "hJSQT\n",
+            "j3I(TsvEjpUu)-DQ-NgCSvpY|V<MvSgi]5N_h \"Nw,yz9<NxMz|KqtO1nud7d<9_7wF:|vr(kQbj:sI!h888vuMW`l\"?k,k2MUbijd7jPPF.]gtjfW\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "w_LC-lQFm-4x",
         "colab_type": "code",
         "colab": {}
       },
