--- a/Text_generation_using_RNN.ipynb
+++ b/Text_generation_using_RNN.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "19_MpL3gu4t4zJGnPAIDFRYwh29Sj8m-N",
-      "authorship_tag": "ABX9TyM+ckuLVPEoApyxZWP3hJBP",
+      "authorship_tag": "ABX9TyNTlHf/MbxXG4PfIJX4euyA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1500,6 +1500,37 @@
       "cell_type": "code",
       "metadata": {
         "id": "w_LC-lQFm-4x",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 104
+        },
+        "outputId": "4fa70c04-7c39-4695-8464-ef1563326527"
+      },
+      "source": [
+        "#After confirming the dimensions are working, let's train our network!\n",
+        "epochs = 30\n",
+        "model.fit(dataset,epochs=epochs)"
+      ],
+      "execution_count": 0,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Train for 351 steps\n",
+            "Epoch 1/30\n",
+            "351/351 [==============================] - 51s 145ms/step - loss: 2.5508\n",
+            "Epoch 2/30\n",
+            "123/351 [=========>....................] - ETA: 35s - loss: 1.9036"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "cETPoGj6nRrj",
         "colab_type": "code",
         "colab": {}
       },
