--- a/Text_generation_using_RNN.ipynb
+++ b/Text_generation_using_RNN.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "19_MpL3gu4t4zJGnPAIDFRYwh29Sj8m-N",
-      "authorship_tag": "ABX9TyPDZdM9mJ2aJtAqa9UI7Jlu",
+      "authorship_tag": "ABX9TyMFNzBrb1UzWqHK/dxc64ys",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -42,7 +42,7 @@
       "metadata": {
         "id": "RRcrZUrHhWzi",
         "colab_type": "code",
-        "outputId": "ee4c04cb-6041-4e93-f3b1-72adf3df2cd8",
+        "outputId": "99caf8b7-0ff6-4717-a37c-a030786c1894",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
@@ -96,7 +96,7 @@
       "metadata": {
         "id": "BVRRNCmyib5P",
         "colab_type": "code",
-        "outputId": "6723ff7c-9343-4ea3-d356-bf379f43ffc7",
+        "outputId": "6a45f53b-bcb5-4e2e-d3ba-d14f00684f32",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
@@ -111,7 +111,7 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "'2.1.0'"
+              "'2.2.0-rc1'"
             ]
           },
           "metadata": {
@@ -126,7 +126,7 @@
       "metadata": {
         "id": "j6rqUTswiu5r",
         "colab_type": "code",
-        "outputId": "be0dc47b-8333-4b0b-d715-e574e2272a6c",
+        "outputId": "3d194820-0a0b-4dd0-a17d-81c6f8bcbbb6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 52
@@ -198,7 +198,7 @@
       "metadata": {
         "id": "Xyd_3vJLjA-v",
         "colab_type": "code",
-        "outputId": "07398b53-3140-45f2-ef9e-3f0ae58fc49a",
+        "outputId": "9ade286f-1701-423b-a431-5b123f4e1048",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 243
@@ -247,7 +247,7 @@
       "metadata": {
         "id": "TXFWWgmkjqyu",
         "colab_type": "code",
-        "outputId": "528349a5-6440-4e70-a7e0-0aa10b493034",
+        "outputId": "6f764b13-7b00-4c58-e277-01c91b19bc75",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 72
@@ -311,7 +311,7 @@
       "metadata": {
         "id": "jroDkrLPkAoC",
         "colab_type": "code",
-        "outputId": "4c6b009e-2398-4533-89e0-0192020e3409",
+        "outputId": "7ed7ecc7-8b0e-4937-a7f8-17ce1620fe97",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 55
@@ -337,7 +337,7 @@
       "metadata": {
         "id": "YWyqN_ZcL2jy",
         "colab_type": "code",
-        "outputId": "5a863717-8ded-4f5f-d625-41473fdaac66",
+        "outputId": "f0619313-9e9b-44ee-92e6-988e203c6c87",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 104
@@ -367,7 +367,7 @@
       "metadata": {
         "id": "rL2sfe9eL89v",
         "colab_type": "code",
-        "outputId": "83657740-9bd6-4e50-bc41-2bc5f4940762",
+        "outputId": "a404302e-a0cb-4b15-ebe1-9f9958423128",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
@@ -408,7 +408,7 @@
       "metadata": {
         "id": "6gSM2wsJMnMq",
         "colab_type": "code",
-        "outputId": "50643990-727a-407d-8156-c60b0ecb794b",
+        "outputId": "ce9242fd-e66c-4fe2-b429-cd4aa8eb0dcd",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 87
@@ -437,7 +437,7 @@
       "metadata": {
         "id": "BlBlcNvCM_tg",
         "colab_type": "code",
-        "outputId": "712fe315-efa8-47d4-f4a6-e1d229ae406e",
+        "outputId": "53a945de-5e93-4fb8-b793-aa03f0b2e691",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 121
@@ -485,7 +485,7 @@
       "metadata": {
         "id": "LE_KEKkuNUM1",
         "colab_type": "code",
-        "outputId": "6865b63b-41a9-4562-9e5f-d102ce125600",
+        "outputId": "075f2950-c915-4a60-85cb-6358c930c051",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 243
@@ -522,7 +522,7 @@
       "metadata": {
         "id": "sId8lKDjN6Ch",
         "colab_type": "code",
-        "outputId": "117951ed-506b-4b2b-c682-cfd14de56df5",
+        "outputId": "1c4876bd-f33d-4796-d23b-14f0f65d05b8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
@@ -548,7 +548,7 @@
       "metadata": {
         "id": "ZguReuKNN_Ne",
         "colab_type": "code",
-        "outputId": "3e20a08b-c2da-4fc6-bbd9-35af5363e955",
+        "outputId": "4838cbb3-9304-490a-be68-c44d405bfde3",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
@@ -608,7 +608,7 @@
       "metadata": {
         "id": "9BNeUeLW1pbe",
         "colab_type": "code",
-        "outputId": "2e119299-2324-40e8-e479-94ac0ebfd8b6",
+        "outputId": "fb62f47d-549e-47a7-ad72-ea6bc7673010",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
@@ -639,7 +639,7 @@
       "metadata": {
         "id": "EYjLxt7g1tnZ",
         "colab_type": "code",
-        "outputId": "702aa102-4290-4888-88dc-abdec5c913ff",
+        "outputId": "fffa1bdb-b142-4096-e9cf-9eee139cb0b6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 572
@@ -714,7 +714,7 @@
       "metadata": {
         "id": "HPrwaXkYLeIh",
         "colab_type": "code",
-        "outputId": "4e7f71a8-062f-42b9-de61-e7b8dbcf7692",
+        "outputId": "e6bcefdf-f9ae-4070-9015-195aee41f818",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
@@ -775,7 +775,7 @@
       "metadata": {
         "id": "5LtfgIj0MjAf",
         "colab_type": "code",
-        "outputId": "dff46a56-d5ff-43ef-dd5e-e729cc4f1b59",
+        "outputId": "afdd92c8-5ae1-40a6-9ef0-f50a79a11d0a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
@@ -806,7 +806,7 @@
       "metadata": {
         "id": "F5y4CnmxMmBx",
         "colab_type": "code",
-        "outputId": "d1941969-6c0a-42cc-9b47-1fb949356f3f",
+        "outputId": "66002e40-3bc2-4417-9f04-bc0882d838fd",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 381
@@ -889,7 +889,7 @@
       "metadata": {
         "id": "AquQW5lmx6AH",
         "colab_type": "code",
-        "outputId": "30a98085-a0b6-4a97-df79-c0a8834762f9",
+        "outputId": "5d0cde7d-1b4a-4e00-c605-118e4971465c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
@@ -968,7 +968,8 @@
       "source": [
         "from tensorflow.keras.models import Sequential\n",
         "from tensorflow.keras.layers import LSTM,Dense,Embedding,Dropout,GRU\n",
-        "from tensorflow.keras.losses import sparse_categorical_crossentropy"
+        "from tensorflow.keras.losses import sparse_categorical_crossentropy\n",
+        "from tensorflow.keras.models import load_model"
       ],
       "execution_count": 0,
       "outputs": []
@@ -992,9 +993,9 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 87
+          "height": 451
         },
-        "outputId": "b5f6cecd-c58a-458b-d6a2-ce8731c2e80f"
+        "outputId": "eea46cbc-77a7-466c-897f-d89316cad264"
       },
       "source": [
         "help(sparse_categorical_crossentropy)"
@@ -1007,6 +1008,27 @@
             "Help on function sparse_categorical_crossentropy in module tensorflow.python.keras.losses:\n",
             "\n",
             "sparse_categorical_crossentropy(y_true, y_pred, from_logits=False, axis=-1)\n",
+            "    Computes the sparse categorical crossentropy loss.\n",
+            "    \n",
+            "    Usage:\n",
+            "    \n",
+            "    >>> y_true = [1, 2]\n",
+            "    >>> y_pred = [[0.05, 0.95, 0], [0.1, 0.8, 0.1]]\n",
+            "    >>> loss = tf.keras.losses.sparse_categorical_crossentropy(y_true, y_pred)\n",
+            "    >>> assert loss.shape == (2,)\n",
+            "    >>> loss.numpy()\n",
+            "    array([0.0513, 2.303], dtype=float32)\n",
+            "    \n",
+            "    Args:\n",
+            "      y_true: Ground truth values.\n",
+            "      y_pred: The predicted values.\n",
+            "      from_logits: Whether `y_pred` is expected to be a logits tensor. By default,\n",
+            "        we assume that `y_pred` encodes a probability distribution.\n",
+            "      axis: (Optional) Defaults to -1. The dimension along which the entropy is\n",
+            "        computed.\n",
+            "    \n",
+            "    Returns:\n",
+            "      Sparse categorical crossentropy loss value.\n",
             "\n"
           ],
           "name": "stdout"
@@ -1593,6 +1615,18 @@
           ],
           "name": "stdout"
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "bFdRr8hRdkQf",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Step 6: Generating text\n",
+        "\n",
+        "Currently our model only expects 128 sequences at a time. We can create a new model that only expects a batch_size=1. We can create a new model with this batch size, then load our saved models weights. Then call .build() on the model:"
       ]
     },
     {
