text generation using model

--- a/Text_generation_using_RNN.ipynb
+++ b/Text_generation_using_RNN.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "19_MpL3gu4t4zJGnPAIDFRYwh29Sj8m-N",
-      "authorship_tag": "ABX9TyMFNzBrb1UzWqHK/dxc64ys",
+      "authorship_tag": "ABX9TyPzrTW/Nt4RGZ+T6x165TDW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1633,6 +1633,61 @@
       "cell_type": "code",
       "metadata": {
         "id": "cETPoGj6nRrj",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "model = create_model(vocab_size, embed_dim, rnn_neurons, batch_size=1)\n",
+        "\n",
+        "model.load_weights('/content/drive/My Drive/classification_Dataset/shakespeare_gen.h5')\n",
+        "\n",
+        "model.build(tf.TensorShape([1, None]))\n"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "NAFQ3Pa0dxfO",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 260
+        },
+        "outputId": "342d94b4-ab82-481a-db55-a76490b7217a"
+      },
+      "source": [
+        "model.summary()"
+      ],
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Model: \"sequential_1\"\n",
+            "_________________________________________________________________\n",
+            "Layer (type)                 Output Shape              Param #   \n",
+            "=================================================================\n",
+            "embedding_1 (Embedding)      (1, None, 64)             5376      \n",
+            "_________________________________________________________________\n",
+            "gru_1 (GRU)                  (1, None, 1026)           3361176   \n",
+            "_________________________________________________________________\n",
+            "dense_1 (Dense)              (1, None, 84)             86268     \n",
+            "=================================================================\n",
+            "Total params: 3,452,820\n",
+            "Trainable params: 3,452,820\n",
+            "Non-trainable params: 0\n",
+            "_________________________________________________________________\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "7_JzL61MeAIp",
         "colab_type": "code",
         "colab": {}
       },
