--- a/Text_generation_using_RNN.ipynb
+++ b/Text_generation_using_RNN.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "19_MpL3gu4t4zJGnPAIDFRYwh29Sj8m-N",
-      "authorship_tag": "ABX9TyPzrTW/Nt4RGZ+T6x165TDW",
+      "authorship_tag": "ABX9TyNKIKAijXJkKHgOTiXeEKTD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1692,7 +1692,60 @@
         "colab": {}
       },
       "source": [
-        ""
+        "def generate_text(model, start_seed,gen_size=100,temp=1.0):\n",
+        "  '''\n",
+        "  model: Trained Model to Generate Text\n",
+        "  start_seed: Intial Seed text in string form\n",
+        "  gen_size: Number of characters to generate\n",
+        "\n",
+        "  Basic idea behind this function is to take in some seed text, format it so\n",
+        "  that it is in the correct shape for our network, then loop the sequence as\n",
+        "  we keep adding our own predicted characters. Similar to our work in the RNN\n",
+        "  time series problems.\n",
+        "  '''\n",
+        "\n",
+        "  # Number of characters to generate\n",
+        "  num_generate = gen_size\n",
+        "\n",
+        "  # Vecotrizing starting seed text\n",
+        "  input_eval = [char_to_ind[s] for s in start_seed]\n",
+        "\n",
+        "  # Expand to match batch format shape\n",
+        "  input_eval = tf.expand_dims(input_eval, 0)\n",
+        "\n",
+        "  # Empty list to hold resulting generated text\n",
+        "  text_generated = []\n",
+        "\n",
+        "  # Temperature effects randomness in our resulting text\n",
+        "  # The term is derived from entropy/thermodynamics.\n",
+        "  # The temperature is used to effect probability of next characters.\n",
+        "  # Higher probability == lesss surprising/ more expected\n",
+        "  # Lower temperature == more surprising / less expected\n",
+        " \n",
+        "  temperature = temp\n",
+        "\n",
+        "  # Here batch size == 1\n",
+        "  model.reset_states()\n",
+        "\n",
+        "  for i in range(num_generate):\n",
+        "\n",
+        "      # Generate Predictions\n",
+        "      predictions = model(input_eval)\n",
+        "\n",
+        "      # Remove the batch shape dimension\n",
+        "      predictions = tf.squeeze(predictions, 0)\n",
+        "\n",
+        "      # Use a cateogircal disitribution to select the next character\n",
+        "      predictions = predictions / temperature\n",
+        "      predicted_id = tf.random.categorical(predictions, num_samples=1)[-1,0].numpy()\n",
+        "\n",
+        "      # Pass the predicted charracter for the next input\n",
+        "      input_eval = tf.expand_dims([predicted_id], 0)\n",
+        "\n",
+        "      # Transform back to character letter\n",
+        "      text_generated.append(ind_to_char[predicted_id])\n",
+        "\n",
+        "  return (start_seed + ''.join(text_generated))"
       ],
       "execution_count": 0,
       "outputs": []
